--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.5",
+    "@next/font": "^13.1.5",
     "@paytweed/frontend-sdk-react": "^0.5.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -19,6 +19,10 @@
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
