--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "next start",
+    "start": "next start  -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
-    "next/font": "^13.1.5",
-    "@paytweed/frontend-sdk-react": "^0.14.0",
+    "@next/font": "^13.1.5",
+    "@paytweed/frontend-sdk-react": "^0.16.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
