--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.5",
+    "@paytweed/backend-sdk": "^1.0.1-beta.0",
     "@paytweed/frontend-sdk-react": "^1.0.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -19,7 +20,7 @@
     "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^6.0.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
