--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@next/font": "^13.1.5",
-    "@paytweed/backend-sdk": "^1.0.1-beta.0",
-    "@paytweed/frontend-sdk-react": "^1.0.0",
+    "@paytweed/backend-sdk": "1.0.1-beta.0",
+    "@paytweed/frontend-sdk-react": "1.0.1-beta.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
